--- a/frontend/src/templates/rss_parser.html
+++ b/frontend/src/templates/rss_parser.html
@@ -31,13 +31,18 @@
             <div class="container">
                 <input type="submit" value="Reload">
             </div>
-        </form>    
+        </form>
         <div class="results-container">
             <div id="rss-feed"></div>
         </div>
-        
-
     </div>
-    
+    <div id="imageModal" class="modal">
+        <span class="close" onclick="closeModal()">&times;</span>
+        <img class="modal-content" id="modalImage">
+        <div id="caption"></div>
+    </div>
+
+
+
 </body>
 </html>
