--- a/frontend/src/static/pacman.css
+++ b/frontend/src/static/pacman.css
@@ -1,30 +1,71 @@
 body {
     margin: 0;
     padding: 0;
+    height: 100vh;
     overflow: hidden;
-    background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
 }
 
 .cat {
-    width: 200px;
-    height: 200px;
     position: absolute;
-    bottom: 50px;
-    left: 50%;
-    transform: translateX(-50%);
-    animation: move-cat 5s ease-in-out infinite alternate;
+    transition: transform 0.1s linear;
+	pointer-events: none;
+}
+
+.cat:hover {
+    transform: scale(1.2) rotate(15deg); /* Enlarge and rotate slightly when hovered */
+}
+
+@keyframes gradient-animation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 @keyframes move-cat {
     0% {
-        transform: translateX(-50%) translateY(0);
+        transform: translateX(-10%) translateY(0);
     }
     100% {
-        transform: translateX(-50%) translateY(-50px);
+        transform: translateX(-10%) translateY(-10px);
     }
 }
 
 .cat img {
-    width: 100%;
+    width: 50px;
     height: auto;
+}
+
+.ripple-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: radial-gradient(circle, rgba(255,0,0,0.1), rgba(255,165,0,0.1), rgba(255,255,0,0.1), rgba(0,128,0,0.1), rgba(0,0,255,0.1), rgba(75,0,130,0.1), rgba(238,130,238,0.1));
+    background-size: 200% 200%;
+    animation: ripple-animation 60s ease-in-out infinite;
+}
+
+@keyframes ripple-animation {
+    0% {
+        background-size: 300% 200%;
+        background-position: 50% 200%; /* Originating from the bottom center */
+        opacity: 0.8;
+    }
+    50% {
+        background-size: 300% 200%;
+        background-position: 50% 200%; /* Keep the bottom origin */
+        opacity: 0.8;
+    }
+    100% {
+        background-size: 300% 200%;
+        background-position: 50% 200%; /* Reset back to the bottom */
+        opacity: 0.8;
+    }
 }
