--- a/frontend/src/static/style.css
+++ b/frontend/src/static/style.css
@@ -19,6 +19,7 @@
     display: block;
     margin-top: -1vw;
 }
+
 .dark-mode {
     background-color: #333;
     color: #fff;
@@ -28,7 +29,13 @@
     color: #fff;
 }
 
+.animations-disabled .ripple-background {
+    animation: none !important;
+}
 
+.animations-disabled .cat {
+    display: none !important;
+}
 
 .dark-mode button {
     background-color: #555;
@@ -131,6 +138,25 @@ a {
 
 a:hover {
     color: #555;
+}
+
+#disable-animations {
+    position: fixed;
+    top: 8px;
+    left: 50px;
+    padding: 10px 15px;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 0.9em;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+#disable-animations span {
+    margin-left: 5px;
+    vertical-align: middle;
 }
 
 #theme-toggle {
@@ -471,3 +497,17 @@ select:focus {
     padding: 10px;
     font-size: 16px;
 }
+
+.article-text {
+	margin: auto;
+}
+
+.article-image {
+	float: left;
+	max-width: 210px;
+	min-height: 150px:
+	min-width: 210px;
+	padding-right: 10px;
+	padding-top: 5px;
+}
+
