--- a/frontend/src/static/pacman.css
+++ b/frontend/src/static/pacman.css
@@ -7,7 +7,7 @@ body {
 
 .cat {
     position: absolute;
-    transition: transform 0.1s linear;
+    transition: transform 0.3s ease, left 0.1s ease, top 0.1s ease;
 	pointer-events: none;
 }
 
@@ -37,7 +37,7 @@ body {
 }
 
 .cat img {
-    width: 50px;
+    width: 64px;
     height: auto;
 }
 
