--- a/frontend/src/templates/rss_parser.html
+++ b/frontend/src/templates/rss_parser.html
@@ -23,10 +23,10 @@
     </div>
     <div class="container">
         <h1>RSS Parser</h1>
-        <form id="rss_url" method="post">
+        <form method="post">
             <div class="label-input">
                 <label for="rss_url">URL:</label>
-                <input type="text" id="rss_url" name="rss_url" value="{{ rss_url }}" style="width: 300px;">
+                <input id="rss_url"  type="text" name="rss_url" value="{{ rss_url }}" style="width: 300px;">
             </div>
             <div class="container">
                 <input type="submit" value="Reload">
